--- a/TestProject/_Imports.razor
+++ b/TestProject/_Imports.razor
@@ -6,5 +6,5 @@
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
-@using Test
-@using Test.Layout
+@using TestProject
+@using TestProject.Layout
